--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>frontend-maven-plugin</artifactId>
             <version>1.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
