--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>pi4j-core</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-plugin-linuxfs</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
