--- a/ui/package.json
+++ b/ui/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
-    "@types/node": "16.11.43",
-    "@types/react": "18.0.15",
-    "@types/react-dom": "18.0.6",
     "axios": "0.27.2",
+    "gsap": "^3.10.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "smooth-scrollbar": "8.7.4",
+    "styled-components": "5.3.5",
     "typescript": "4.7.4",
     "web-vitals": "2.1.4"
   },
@@ -41,5 +37,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.5.2",
+    "@types/node": "16.11.43",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@types/smooth-scrollbar": "8.2.5",
+    "@types/gsap": "3.0.0",
+    "@types/styled-components": "5.1.25",
+    "@typescript-eslint/eslint-plugin": "5.30.6",
+    "@typescript-eslint/parser": "5.30.6",
+    "eslint": "8.19.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.30.1",
+    "prettier": "2.7.1"
   }
 }
