--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "axios": "0.27.2",
     "gsap": "^3.10.4",
+    "install": "^0.13.0",
+    "npm": "^8.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
@@ -42,12 +48,12 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "13.5.0",
+    "@types/gsap": "3.0.0",
     "@types/jest": "27.5.2",
     "@types/node": "16.11.43",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/smooth-scrollbar": "8.2.5",
-    "@types/gsap": "3.0.0",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
