--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
+    "@mui/icons-material": "5.8.4",
+    "@mui/material": "5.9.0",
     "axios": "0.27.2",
     "install": "0.13.0",
     "npm": "^8.14.0",
@@ -23,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:80",
   "eslintConfig": {
     "extends": [
       "react-app",
