--- a/ui/package.json
+++ b/ui/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "11.9.3",
     "@mui/icons-material": "5.8.4",
     "@mui/material": "5.9.0",
+    "@mui/x-date-pickers": "5.0.0-beta.3",
     "axios": "0.27.2",
     "install": "0.13.0",
-    "npm": "^8.14.0",
+    "moment": "2.29.4",
+    "npm": "8.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
