--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,9 @@
             <version>8.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.196</version>
-            <scope>runtime</scope>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.0.6</version>
         </dependency>
     </dependencies>
 
