--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=80
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/blinds
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=miszcz
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.h2.console.enabled=true
 
