--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>moscode</groupId>
     <artifactId>osiekblinds</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>osiekblinds</name>
     <description>osiekblinds</description>
     <properties>
