--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "11.9.3",
@@ -11,10 +11,13 @@
     "axios": "0.27.2",
     "install": "0.13.0",
     "moment": "2.29.4",
+    "net": "1.0.2",
     "npm": "8.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "sockjs-client": "1.5.1",
+    "stompjs": "2.3.3",
     "styled-components": "5.3.5",
     "typescript": "4.7.4",
     "web-vitals": "2.1.4"
@@ -25,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:80",
+  "proxy": "http://localhost",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -52,6 +55,8 @@
     "@types/node": "16.11.43",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/sockjs-client": "1.5.1",
+    "@types/stompjs": "2.3.5",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "5.30.6",
     "@typescript-eslint/parser": "5.30.6",
