--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.flyway.baseline-on-migrate=true
 
 pi4j.library.path=/home/pi
 app.testblind=2
+
+#logging.level.org.springframework.web.socket=DEBUG
+
+servo.url=http://192.168.1.51/
+servo.auth=!0siekPass)
